# exercise_thermal_expansion_polymers

./: README.md  pyproject.toml
exercise_thermal_expansion_polymers/: dataset.csv  dataset.ipynb  exercise.ipynb
tests/: test_thermal_expansion_polymers.py
